--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,4 +1,7 @@
 {
+  "diagnostic-languageserver.filetypes": {
+    "vim": "vint"
+  },
   "clangd.path": "/Users/axie/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd",
   "coc.preferences.formatOnSaveFiletypes": ["py", "python", "html", "css", "markdown", "json"],
   "python.formatting.blackPath": "black",
