--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,9 +1,24 @@
 {
-  "diagnostic-languageserver.filetypes": {
-    "vim": "vint"
-  },
+  "diagnostic.virtualText": true,
+  "coc.preferences.formatOnSaveFiletypes": ["*"],
   "clangd.path": "/Users/axie/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd",
-  "coc.preferences.formatOnSaveFiletypes": ["py", "python", "html", "css", "markdown", "json"],
-  "python.formatting.blackPath": "black",
-  "python.formatting.provider": "black"
+  "python.formatting.provider": "black",
+  "python.formatting.blackPath": "/home/axie/.local/bin/black",
+  "languageserver": {
+    "ccls": {
+      "command": "ccls",
+      "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"],
+      "rootPatterns": [".ccls", "compile_commands.json", ".git/", ".hg/"],
+      "initializationOptions": {
+        "cache": {
+          "directory": "/tmp/ccls"
+        }
+      }
+    },
+    "dockerfile": {
+      "command": "docker-langserver",
+      "filetypes": ["dockerfile"],
+      "args": ["--stdio"]
+    }
+  }
 }
