--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -11,6 +11,8 @@
 ;
 ;=====================================================
 
+; include-file
+
 [global/wm]
 ;https://github.com/jaagr/polybar/wiki/Configuration#global-wm-settings
 margin-top = 0
@@ -40,6 +42,8 @@ format-offset =
 [colors]
 ; Nord theme ============
 background = #002F343F
+; background = #8C2F343F
+background-transparent = #002F343F
 foreground = #f3f4f5
 alert = #d08770
 volume-min = #a3be8c
@@ -87,7 +91,7 @@ fixed-center = true
 bottom = false
 ;separator = |
 
-background = ${colors.background}
+background = ${colors.background-transparent}
 foreground = ${colors.foreground}
 
 line-size = 1.5
@@ -96,15 +100,15 @@ line-color = #f00
 ;border-size = 2
 ;border-left-size = 25
 ;border-right-size = 25
-;border-top-size = 0
+; border-top-size = 3
 ;border-bottom-size = 25
-border-color = #00000000
+border-color = ${colors.background-transparent}
 
-padding-left = 0
-padding-right = 1
+padding-left = 2
+padding-right = 2
 
-module-margin-left = 2
-module-margin-right = 2
+; module-margin-left = 2
+; module-margin-right = 2
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
@@ -118,9 +122,10 @@ font-3 = "Noto Sans Mono:size=10;0"
 font-4 = "FontAwesome5Brands:size=13;0"
 font-5 = "MesloLGS NF"
 
-modules-left = ewmh xwindow
-modules-center = spotify-prev spotify2 spotify-next date
-modules-right = wireless-network networkspeeddown pavolume memory2 cpu2 arch-updates aur-updates
+modules-left = round-left ewmh xwindow round-right
+modules-center = round-left spotify-prev margin spotify2 margin spotify-next margin date round-right
+modules-right = round-left networkspeeddown margin pavolume margin memory2 margin cpu2 margin arch-updates aur-updates round-right
+; wireless-network networkspeeddown
 ; can't change xkeyboard
 
 tray-detached = false
@@ -202,6 +207,29 @@ modules-right = filesystem
 ############                       MODULES A-Z                      ############
 ################################################################################
 ################################################################################
+
+[module/round-left]
+type = custom/text
+
+; content = %{T3}%{T-}
+content = 
+content-foreground = ${colors.background}
+content-background = ${colors.background-transparent}
+
+[module/round-right]
+type = custom/text
+
+; content = %{T3}%{T-}
+content = 
+content-foreground = ${colors.background}
+content-background = ${colors.background-transparent}
+
+[module/margin]
+type = custom/text
+
+content = %{T2}  %{T-}
+content-foreground = ${colors.background-transparent}
+content-background = ${colors.background}
 
 [module/arch-updates]
 type = custom/script
@@ -476,6 +504,7 @@ label-urgent-padding = 2
 
 label-empty = %name%
 label-empty-foreground = #80BBBBBB
+label-empty-background = ${colors.background}
 label-empty-padding = 2
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
@@ -707,7 +736,8 @@ type = internal/network
 ;interface = enp14s0
 ;interface = enp0s31f6
 ;interface = enp4s0
-interface = wlo1
+;interface = wlo1
+interface = enp38s0
 label-connected = "%downspeed:7%"
 format-connected = <label-connected>
 format-connected-prefix = " "
