--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -124,7 +124,7 @@ font-5 = "MesloLGS NF"
 
 modules-left = round-left ewmh xwindow round-right
 modules-center = round-left spotify-prev margin spotify2 margin spotify-next margin date round-right
-modules-right = round-left networkspeeddown margin pavolume margin memory2 margin cpu2 margin arch-updates aur-updates round-right
+modules-right = round-left networkspeeddown margin pavolume margin memory2 margin cpu2 margin arch-updates margin aur-updates round-right
 ; wireless-network networkspeeddown
 ; can't change xkeyboard
 
