--- a/alacritty/alacritty-linux.yml
+++ b/alacritty/alacritty-linux.yml
@@ -102,6 +102,7 @@ scrolling:
   #multiplier: 3
 
 # Font configuration
+# Contestable options: Hack, Droid Sans Mono, Roboto Mono
 font:
   # Normal (roman) font face
   normal:
@@ -111,7 +112,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: hack
+    family: Hack
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -122,7 +123,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: hack
+    family: Hack
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -133,7 +134,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: hack
+    family: Hack
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -150,7 +151,7 @@ font:
     style: Bold Italic
 
   # Point size
-  size: 11.0
+  size: 12.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -414,7 +415,7 @@ background_opacity: 0.8
 #working_directory: None
 
 # Send ESC (\x1b) before characters when alt is pressed.
-alt_send_esc: false
+# alt_send_esc: true
 
 #mouse:
 # Click settings
