--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -124,7 +124,7 @@ font-5 = "MesloLGS NF"
 
 modules-left = round-left ewmh xwindow round-right
 modules-center = round-left spotify-prev margin spotify2 margin spotify-next margin date round-right
-modules-right = round-left networkspeeddown margin pavolume margin memory2 margin cpu2 margin arch-updates margin aur-updates round-right
+modules-right = round-left networkspeeddown margin pavolume margin memory2 margin cpu2 margin arch-updates margin aur-updates margin covid margin round-right
 ; wireless-network networkspeeddown
 ; can't change xkeyboard
 
@@ -251,6 +251,17 @@ format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 format-prefix = "  "
 format-prefix-foreground = #FFBB00
+;format-underline = #FFBB00
+
+[module/covid]
+type = custom/script
+exec = ~/.config/polybar/scripts/covid.sh
+interval = 86400
+label = %output%
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
+format-prefix = "  "
+format-prefix-foreground = #FFA500
 ;format-underline = #FFBB00
 
 ################################################################################
