--- a/alacritty/alacritty-linux.yml
+++ b/alacritty/alacritty-linux.yml
@@ -341,7 +341,8 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.8
+window:
+  opacity: 0.8
 
 #selection:
 # This string contains all characters that are used as separators for
