--- a/xmonad/scripts/picom.conf
+++ b/xmonad/scripts/picom.conf
@@ -179,7 +179,7 @@ inactive-opacity-override = false;
 # active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-inactive-dim = 0.1
+# inactive-dim = 0.1
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
@@ -271,7 +271,7 @@ mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
 # mark-ovredir-focused = false
-# mark-ovredir-focused = true;
+mark-ovredir-focused = true;
 
 # Try to detect windows with rounded corners and don't consider them 
 # shaped windows. The accuracy is not very high, unfortunately.
