alacritty ctrl-i support

--- a/alacritty/alacritty-linux.yml
+++ b/alacritty/alacritty-linux.yml
@@ -684,6 +684,7 @@ window:
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
 key_bindings:
+  - { key: I, mods: Control, chars: "\x1b[105;5u" }
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
   #- { key: L,         mods: Control,                    action: ClearLogNotice }
