--- a/xmonad/xmonad.cabal
+++ b/xmonad/xmonad.cabal
@@ -1,6 +1,6 @@
 -- Copied from https://github.com/xmonad/xmonad/blob/master/xmonad.cabal --
 name:               xmonad
-version:            0.16.99999
+version:            0.17.0.9
 synopsis:           A tiling window manager
 description:        xmonad is a tiling window manager for X. Windows are arranged
                     automatically to tile the screen without gaps or overlap, maximising
@@ -26,27 +26,25 @@ author:             Spencer Janssen, Don Stewart, Adam Vogt, David Roundy, Jason
                     Jens Petersen, Joey Hess, Jonne Ransijn, Josh Holland, Khudyakov Alexey,
                     Klaus Weidner, Michael G. Sloan, Mikkel Christiansen, Nicolas Dudebout,
                     Ondřej Súkup, Paul Hebble, Shachaf Ben-Kiki, Siim Põder, Tim McIver,
-                    Trevor Elliott, Wouter Swierstra, Conrad Irwin, Tim Thelion
+                    Trevor Elliott, Wouter Swierstra, Conrad Irwin, Tim Thelion, Tony Zorman
 maintainer:         xmonad@haskell.org
-tested-with:        GHC == 8.4.4 || == 8.6.5 || == 8.8.4 || == 8.10.4 || == 9.0.1
+tested-with:        GHC == 8.4.4 || == 8.6.5 || == 8.8.4 || == 8.10.7 || == 9.0.2 || == 9.2.2
 category:           System
 homepage:           http://xmonad.org
 bug-reports:        https://github.com/xmonad/xmonad/issues
 build-type:         Simple
 extra-source-files: README.md
                     CHANGES.md
-                    CONFIG
                     CONTRIBUTING.md
                     INSTALL.md
                     MAINTAINERS.md
-                    STYLE
                     TUTORIAL.md
                     man/xmonad.1.markdown
                     man/xmonad.1
                     man/xmonad.1.html
                     man/xmonad.hs
                     util/hpcReport.sh
-cabal-version:      >= 1.8
+cabal-version:      1.12
 
 source-repository head
   type:     git
@@ -70,7 +68,7 @@ library
                    XMonad.StackSet
   other-modules:   Paths_xmonad
   hs-source-dirs:  src
-  build-depends:   base                  >= 4.9 && < 5
+  build-depends:   base                  >= 4.11 && < 5
                  , X11                   >= 1.10 && < 1.11
                  , containers
                  , data-default-class
@@ -83,6 +81,7 @@ library
                  , transformers          >= 0.3
                  , unix
   ghc-options:     -funbox-strict-fields -Wall -Wno-unused-do-bind
+  default-language: Haskell2010
 
   -- Keep this in sync with the oldest version in 'tested-with'
   if impl(ghc > 8.4.4)
@@ -95,6 +94,7 @@ executable xmonad
   main-is:       Main.hs
   build-depends: base, xmonad
   ghc-options:   -Wall -Wno-unused-do-bind
+  default-language: Haskell2010
 
   -- Keep this in sync with the oldest version in 'tested-with'
   if impl(ghc > 8.4.4)
@@ -129,6 +129,7 @@ test-suite properties
                 , X11
                 , containers
                 , xmonad
+  default-language: Haskell2010
 
   if flag(quickcheck-classes) && impl(ghc > 8.5)
     -- no quickcheck-classes in LTS-12
