--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -117,6 +117,7 @@ enable-ipc = true
 ;https://github.com/jaagr/polybar/wiki/Fonts
 font-0 = "Noto Sans:size=10;0"
 font-1 = "FontAwesome:size=13;0"
+; font-2 = "Noto Color Emoji:scale=10;0"
 font-2 = "Noto Sans:size=10;0"
 font-3 = "Noto Sans Mono:size=10;0"
 font-4 = "FontAwesome5Brands:size=13;0"
@@ -124,7 +125,7 @@ font-5 = "MesloLGS NF"
 
 modules-left = round-left ewmh xwindow round-right
 modules-center = round-left spotify-prev margin spotify2 margin spotify-next margin date round-right
-modules-right = round-left networkspeeddown margin pavolume margin memory2 margin cpu2 margin arch-updates margin aur-updates margin covid margin round-right
+modules-right = round-left networkspeeddown margin pavolume margin memory2 margin cpu2 margin arch-updates margin aur-updates margin covid margin tesla margin round-right
 ; wireless-network networkspeeddown
 ; can't change xkeyboard
 
@@ -261,6 +262,17 @@ label = %output%
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 format-prefix = "  "
+format-prefix-foreground = #FFA500
+;format-underline = #FFBB00
+
+[module/tesla]
+type = custom/script
+exec = ~/.config/polybar/scripts/tesla.sh
+interval = 3600
+label = %output%
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
+format-prefix = "  "
 format-prefix-foreground = #FFA500
 ;format-underline = #FFBB00
 
