--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -125,7 +125,7 @@ font-5 = "MesloLGS NF"
 
 modules-left = round-left ewmh xwindow round-right
 modules-center = round-left spotify-prev margin spotify2 margin spotify-next margin date round-right
-modules-right = round-left networkspeeddown margin pavolume margin memory2 margin cpu2 margin arch-updates margin aur-updates margin covid margin tesla margin round-right
+modules-right = round-left networkspeeddown margin pavolume margin memory2 margin cpu2 margin arch-updates margin aur-updates margin covid margin round-right
 ; wireless-network networkspeeddown
 ; can't change xkeyboard
 
