--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,32 +1,35 @@
 # REF: https://unix.stackexchange.com/questions/175421/default-tmux-config
 
 # UI
+set -g status-position top
 set -sg terminal-overrides ",*:RGB" # nvim colours
 set -g status-style 'bg=default' # transparent background
 set -g status-left '#[fg=yellow,bold]#S '
-set -g window-status-format '#[fg=gray]#W'
-set -g window-status-current-format '#[fg=lightyellow,bold]#W'
+# show path for window status instead of just zsh
+set -g window-status-format '#[fg=gray]#{?#{==:#W,zsh},#{b:pane_current_path},#W}'
+set -g window-status-current-format '#[fg=lightyellow,bold]#{?#{==:#W,zsh},#{b:pane_current_path},#W}'
 set-option -g status-justify centre
 set -g status-right '#[fg=lightblue,bold]%H:%M'
 
 # Settings
 set -g mouse on
 set -g set-clipboard on
-set -g status-position top
 set -g escape-time 0
 set -g renumber-windows on
 # set -g base-index 1
 # set -g status-interval 1
+set -g detach-on-destroy off
 
 # Binds
 bind r source-file ~/.tmux.conf
-bind S command-prompt -I '#S' "rename-session '%%'"
+bind R command-prompt -I '#S' "rename-session '%%'"
+bind S command-prompt -p "New Session:" "new-session -A -s '%%'"
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 bind g new-window -c '#{pane_current_path}' -n 'lazygit' lazygit
 bind G new-window -c '#{pane_current_path}' -n 'lazydocker' lazydocker
-bind z new-window 'cd $(zoxide query -i)' # NOTE: not working
+# bind z new-window 'cd $(zoxide query -i)' # NOTE: not working
 
 bind h select-pane -L
 bind j select-pane -D
