feat(tmux): separate tmux scripts

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,7 +21,7 @@ set -g renumber-windows on
 set -g detach-on-destroy off
 
 # Binds
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 bind R command-prompt -I '#S' "rename-session '%%'"
 bind S command-prompt -p "New Session:" "new-session -A -s '%%'"
 bind '%' split-window -c '#{pane_current_path}' -h
@@ -29,7 +29,8 @@ bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 bind g new-window -c '#{pane_current_path}' -n 'lazygit' lazygit
 bind G new-window -c '#{pane_current_path}' -n 'lazydocker' lazydocker
-# bind z new-window 'cd $(zoxide query -i)' # NOTE: not working
+bind z command-prompt -p "Zoxide Search:" "run-shell '$HOME/.config/tmux/scripts/t %%'"
+# bind Z run-shell "$HOME/.config/tmux/scripts/tt" # NOTE: not working
 
 bind h select-pane -L
 bind j select-pane -D
