--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,7 @@ set -g set-clipboard on
 set -g escape-time 0
 set -g renumber-windows on
 # set -g base-index 1
-# set -g status-interval 1
+set -g status-interval 1
 set -g detach-on-destroy off
 
 # Binds
