fix: cleanup and fix config settings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,7 @@ set -g renumber-windows on
 # set -g base-index 1
 set -g status-interval 1
 set -g detach-on-destroy off
+set -g default-terminal 'alacritty'
 
 # Binds
 bind r source-file ~/.config/tmux/tmux.conf
