--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,7 +18,7 @@ set -g escape-time 0
 set -g renumber-windows on
 # set -g base-index 1
 set -g status-interval 1
-set -g detach-on-destroy off
+# set -g detach-on-destroy off
 set -g default-terminal 'alacritty'
 
 # Binds
