--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -261,7 +261,7 @@ interval = 3600
 label = %output%
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
-format-prefix = "  "
+format-prefix = " 󰎑 "
 format-prefix-foreground = #FFA500
 ;format-underline = #FFBB00
 
