--- a/xmonad/xmonad.cabal
+++ b/xmonad/xmonad.cabal
@@ -1,6 +1,6 @@
 -- Copied from https://github.com/xmonad/xmonad/blob/master/xmonad.cabal --
 name:               xmonad
-version:            0.17.0.9
+version:            0.17.2.9
 synopsis:           A tiling window manager
 description:        xmonad is a tiling window manager for X. Windows are arranged
                     automatically to tile the screen without gaps or overlap, maximising
@@ -28,7 +28,7 @@ author:             Spencer Janssen, Don Stewart, Adam Vogt, David Roundy, Jason
                     Ondřej Súkup, Paul Hebble, Shachaf Ben-Kiki, Siim Põder, Tim McIver,
                     Trevor Elliott, Wouter Swierstra, Conrad Irwin, Tim Thelion, Tony Zorman
 maintainer:         xmonad@haskell.org
-tested-with:        GHC == 8.4.4 || == 8.6.5 || == 8.8.4 || == 8.10.7 || == 9.0.2 || == 9.2.2
+tested-with:        GHC == 8.6.5 || == 8.8.4 || == 8.10.7 || == 9.0.2 || == 9.2.7 || == 9.4.4 || == 9.6.1
 category:           System
 homepage:           http://xmonad.org
 bug-reports:        https://github.com/xmonad/xmonad/issues
@@ -54,8 +54,6 @@ flag pedantic
   description: Be pedantic (-Werror and the like)
   default:     False
   manual:      True
-
-flag quickcheck-classes
 
 library
   exposed-modules: XMonad
@@ -84,7 +82,7 @@ library
   default-language: Haskell2010
 
   -- Keep this in sync with the oldest version in 'tested-with'
-  if impl(ghc > 8.4.4)
+  if impl(ghc > 8.6.5)
     ghc-options:   -Wno-unused-imports
 
   if flag(pedantic)
@@ -97,7 +95,7 @@ executable xmonad
   default-language: Haskell2010
 
   -- Keep this in sync with the oldest version in 'tested-with'
-  if impl(ghc > 8.4.4)
+  if impl(ghc > 8.6.5)
     ghc-options:   -Wno-unused-imports
 
   if flag(pedantic)
@@ -126,15 +124,11 @@ test-suite properties
   hs-source-dirs: tests
   build-depends:  base
                 , QuickCheck >= 2
+                , quickcheck-classes >= 0.4.3
                 , X11
                 , containers
                 , xmonad
   default-language: Haskell2010
-
-  if flag(quickcheck-classes) && impl(ghc > 8.5)
-    -- no quickcheck-classes in LTS-12
-    -- GHC 8.4 and lower needs too much boilerplate (Eq1, Show1, …)
-    build-depends: quickcheck-classes >= 0.4.3
 
   if flag(pedantic)
     ghc-options:   -Werror
