feat: zsh refactor

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,8 +30,8 @@ bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 bind g new-window -c '#{pane_current_path}' -n 'lazygit' lazygit
 bind G new-window -c '#{pane_current_path}' -n 'lazydocker' lazydocker
-bind z command-prompt -p "Zoxide Search:" "run-shell '$HOME/.config/tmux/scripts/t %%'"
-# bind Z run-shell "$HOME/.config/tmux/scripts/tt" # NOTE: not working
+bind z command-prompt -p "Zoxide Search:" "run-shell 'source $HOME/dotconfig/tmux/scripts/aliases.sh && t %%'"
+# bind Z run-shell "source $HOME/dotconfig/tmux/scripts/aliases.sh && tt" # NOTE: not working
 
 bind h select-pane -L
 bind j select-pane -D
