feat(lazygit): add custom commands

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -1,14 +1,42 @@
+keybinding:
+  universal:
+    openRecentRepos: "<c-y>"
+    createPatchOptionsMenu: "<c-t>"
+
 customCommands:
   - key: "Z"
-    command: "git cz"
     context: "files"
+    command: "git cz"
+    description: "commit with commitizen"
     loadingText: "opening commitizen commit tool"
     subprocess: true
-  - key: "<C-p>"
+  - key: "<c-p>"
+    context: "global"
     command: "git push --force"
-    context: "files"
+    description: "git force push"
     loadingText: "push (force, without --force-with-lease)"
     prompts:
       - type: "confirm"
         title: "Confirm:"
         body: "Are you sure you want to force push to {{.CheckedOutBranch.Name}}?"
+  - key: "G"
+    context: "localBranches"
+    command: "gh pr checkout {{index .PromptResponses 0}}"
+    description: "check out GitHub PR"
+    loadingText: "checking out PR"
+    prompts:
+      - type: "input"
+        title: "GitHub PR #id:"
+  - key: "<c-r>"
+    context: "localBranches"
+    command: "{{index .PromptResponses 0}} {{.SelectedLocalBranch.Name}}"
+    description: "git rebase (onto checked-out branch)"
+    loadingText: "rebasing"
+    prompts:
+      - type: "menu"
+        title: "Rebase '{{.SelectedLocalBranch.Name}}' onto '{{.CheckedOutBranch.Name}}'"
+        options:
+          - name: "simple rebase"
+            value: "git rebase"
+          - name: "interactive rebase"
+            value: "git rebase --interactive"
