--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,7 @@ set -g mouse on
 set -g set-clipboard on
 set -g escape-time 0
 set -g renumber-windows on
-# set -g base-index 1
+set -g base-index 1
 set -g status-interval 1
 # set -g detach-on-destroy off
 set -g default-terminal 'alacritty'
